--- a/Untukrima/Mentahan-maukahkamu.html
+++ b/Untukrima/Mentahan-maukahkamu.html
@@ -50,7 +50,7 @@
   <!-- Pesan Ketiga dengan Animasi Ngetik -->
   <section>
   	<!-- Background --><div class="wp"><img id="imgtiga" src="https://feeldreams.github.io/maukahkamu/wptiga.jpg"/></div>
-      <p id="teksnimasi"> I LOVE YOUUUUUUUUUU KEKASIH CANTIKKKUU</p>
+      <p id="teksnimasi"> I LOVE YOUUUUUUUUUU KEKASIH CANTIKKKUU Mari kita buat kisah kita menjadi perhatian banyak orang</p>
   </section>
   
   <!-- Pesan Keempat dengan Pertanyaan -->
@@ -63,10 +63,10 @@
       
       <div id="Tombol">
        <a id="By" onClick="fungsipertama()">Cuman sayang ajaa</a>
-       <a id="Bn" onClick="fungsikedua()">Sayang banget banget banget</a>
-     </div>
+       <a id="Bn" onClick="fungsikedua()">Sayang banget </a>
+     </div> yaaaaaa huuu
   </section>
-  
+
   <!-- Pesan Akhir, edit di paling bawah di dalam Script -->
   <section id="iniakhir">
   	<!-- Background --><div class="wp" id="wpakhir"><img src="https://feeldreams.github.io/maukahkamu/wplima.jpg"/></div>
@@ -81,36 +81,37 @@
       </div>
   </section>
   
-  <div id="initom" class="menu">
-  <a class='tombol' onclick="tes()">
+  <div id="initom" class="menu"> akan ada cerita baru 
+  <a class='tombol' onclick="tes()"> sayaaaaang
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/> </svg>
   </a>
   </div>
 
 <script>
 // Teks ketika klik tombol Mau
-function fungsipertama(Bikinbahagia){
+function fungsipertama(selalu tersenyum selamanya sayang){
        fungsi=1;tes(bahagia);
        teksjudulakhir = "Aku selalu sayang kamu";
        tekskalimatakhir = "Akan aku perjuangkan kamu selamanya";
 }
 
 // Teks ketika klik tombol Gamau
-function fungsikedua(){ galau
+function fungsikedua(salting aku akan bahagia ){ galau
        fungsi=1;tes(Sedih);
-       teksjudulakhir = "Jadikan aku menjadi Pacar yang kamu mau yahh sayang";
+       teksjudulakhir = "Jadikan aku menjadi Pacar yang kamu mau yahh sayang";>Jadikan aku menjadi Pacar yang kamu mau
        tekskalimatakhir = "Biar kita bersama selamanyaaa";
 }
 
 // Teks Akhir
-teksjudulakhir2 = "terakhir dari aku sayang";
+teksjudulakhir2 = ">
+	">terakhir dari aku sayang";
 tekspalingakhir = "jaga diri baik-baik dan jaga perasaan kamu saat kita jauh yaaa:)";
   
 // Teks yang akan dikirim ke WhatsApp
 pesanwhatsapp = "Aku,Kamu, dan cinta kita akan bersema selamanya";
 
 const body = document.querySelector("body"); initom.style="opacity:0;bottom:0;transition:none"; audio = new Audio('' + linkmp3.src); function berjatuhan() {const heart = document.createElement("div"); heart.className = "fas fa-heart"; heart.style.left = (Math.random() * 90)+"vw"; heart.style.animationDuration = (Math.random()*3)+2+"s"; body.appendChild(heart);} setInterval(function name(params) {var heartArr = document.querySelectorAll(".fa-heart"); if (heartArr.length > 100) {heartArr[0].remove()}},100);
-</script>
+</script> semogaaa kitaaa ditakdirkann yahh sayang 
 <script src="https://feeldreams.github.io/maukahkamu/main.js"></script>
-</body>
-</html>
+</body> Senang bahagia selalu besamamu
+</html> Aku cinta kamuu 🌹
